samples/_failures_safe/1761559624_bc22d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_765a080d.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_765a080d.c:146:54: error: expected declaration or statement at end of input
  146 | void matrix_transpose(const struct Matrix* a, struct Matrix* result) {
      |                                                      ^~~~~~
